--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "heatmap-gl",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "description": "WebGL2 powered fast heatmaps for spectrograms and more",
     "homepage": "https://github.com/AliFlux/heatmap-gl",
     "main": "dist/heatmap-gl.js",
@@ -10,12 +10,25 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/AliFlux/heatmap-gl.git"
+        "url": "git+https://github.com/AliFlux/heatmap-gl.git"
     },
     "author": "Ali Ashraf <aliashraf@outlook.com>",
     "license": "MIT",
     "devDependencies": {
         "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2"
-    }
+    },
+    "bugs": {
+        "url": "https://github.com/AliFlux/heatmap-gl/issues"
+    },
+    "directories": {
+        "example": "examples"
+    },
+    "dependencies": {},
+    "keywords": [
+        "heatmap",
+        "spectrogram",
+        "webgl",
+        "analytics"
+    ]
 }
